prevent image overflow and strech, fixes #119

--- a/static-prototype/assets/sass/base/_base.sass
+++ b/static-prototype/assets/sass/base/_base.sass
@@ -120,3 +120,7 @@ pre
 pre code
   background: transparent
   padding: 0
+
+img
+  max-width: 100%
+  height: auto
